--- a/S14-API/appsettings.json
+++ b/S14-API/appsettings.json
@@ -5,11 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Key": "NTRttyy3JPxkaeIr4HRWk-MhXHWhAssUexEzK3j-WmxaGX_ME-Bur2HZxWJjbqXdHov-U7da2qIUdK-hhfGKAA",
+    "Issuer": "https://app.s14.dev",
+    "Audience": "https://s14.dev"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Project-S14;User Id=postgres;Password=postgres;",
-    "Jwt:Key": "NTRttyy3JPxkaeIr4HRWk-MhXHWhAssUexEzK3j-WmxaGX_ME-Bur2HZxWJjbqXdHov-U7da2qIUdK-hhfGKAA"
-    "Jwt:Issuer": "S14-APP",
-    "Jwt:Audience": "S14-CLIENT"
+    "DefaultConnection": "Server=localhost;Database=Project-S14;User Id=sa;Password=123!"
   },
   "AllowedHosts": "*"
 }
